--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -8,7 +8,7 @@
 body
   min-height: 100vh
   overflow-y: scroll
-  .modal-open
+  &.is-shown-modal
     overflow: hidden
   &.welcome
     background-color: $base
