--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -1,51 +1,6 @@
-// oulu-functions-before-variables
-@import oulu-functions-before-variables
-
-//////////////////////////////
-// variables
-//////////////////////////////
-
-@import settings/variables/**/*
-@import oulu-variables
-
-// oulu-functions-after-variables (functions need variables)
-@import oulu-functions-after-variables
-
-//////////////////////////////
-// mixins
-//////////////////////////////
-
-@import oulu-mixins
-@import modules/buttons/buttons
-@import modules/text-style/long-text-style
-
-//////////////////////////////
-// initializers
-//////////////////////////////
-
-// oulu-initializers
-@import oulu-initializers
-
-//////////////////////////////
-// helpers
-//////////////////////////////
-
-@import oulu-helpers
-@import settings/helpers/**/*
-
-//////////////////////////////
-// style
-//////////////////////////////
-
-@import shared/**/*
-@import github
-@import atoms/**/*
+@import common-imports
 @import blocks/shared/alert
+@import blocks/shared/modal
 @import welcome/**/*
-
-@import bootstrap/mixins
-@import bootstrap/close
-@import bootstrap/modal
-@import settings/custom-bootstrap/**/*
 
 @import 'mojik/mojik'
