--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -9,7 +9,7 @@
     nav.auth-form-nav
       ul.auth-form-nav__items
         li.auth-form-nav__item
-           span.auth-form-nav__item-link(data-target="#nda-modal" data-toggle="modal")
+           span.auth-form-nav__item-link.js-modal(data-target="#nda-modal")
             | 秘密保持契約内容を確認
 
 .auth-form.is-sign-up.a-card
