--- a/app/assets/stylesheets/blocks/card/_card-header.sass
+++ b/app/assets/stylesheets/blocks/card/_card-header.sass
@@ -1,5 +1,5 @@
 .card-header
-  border-bottom: $background-color solid 1px
+  border-bottom: solid 1px $background-color
   padding: 0.75rem 1.25rem
   &:first-child
     +border-radius(top, .25rem)
