--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -93,7 +93,7 @@
         | 秘密保持契約
       ul.auth-form-item__checkboxes
         li.auth-form-checkbox
-          label.auth-form-checkbox__label.js-nda-action(data-target="#nda-modal" data-toggle="modal")
+          label.auth-form-checkbox__label.js-nda-action.js-modal(data-target="#nda-modal")
             | 秘密保持契約に同意する
 
   .auth-form-action.is-sign-up-action
