--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -19,5 +19,5 @@
           = link_to login_path, class: "auth-form-nav__item-link" do
             | サインイン
         li.auth-form-nav__item
-           span.auth-form-nav__item-link(data-target="#nda-modal" data-toggle="modal")
+           span.auth-form-nav__item-link.js-modal(data-target="#nda-modal")
             | 秘密保持契約内容を確認
