デザイン崩れ修正

--- a/app/assets/stylesheets/blocks/page/_page-header.sass
+++ b/app/assets/stylesheets/blocks/page/_page-header.sass
@@ -4,7 +4,7 @@
   margin-bottom: 1.5rem
   +media-breakpoint-down(sm)
     margin-bottom: 1rem
-  &.has-border-bottom-none
+  &.is-border-bottom-none
     border-bottom: none
 
 .page-header__container
