--- a/app/assets/stylesheets/blocks/page/_page-tabs.sass
+++ b/app/assets/stylesheets/blocks/page/_page-tabs.sass
@@ -43,7 +43,7 @@
     font-size: .75rem
   &:hover
     color: $default-text
-  &.is-current
+  &.is-active
     background-color: $background-color
     border-color: #b9b9b9
     border-bottom-color: $background-color
