--- a/app/assets/stylesheets/shared/_base.sass
+++ b/app/assets/stylesheets/shared/_base.sass
@@ -74,7 +74,7 @@ body
   &[class*=-secondary]
     border: solid 1px #c1c5b9
   &[class*=-primary]:disabled
-    background-color: $main-color
+    background-color: $primary
     cursor: default
 
 [class*=is-button-simple-]:not(input)
