--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -1,6 +1,6 @@
 - title @search_words.present? ? "'#{@search_words.join(" ")}'の検索結果" : "日報"
 
-header.page-header.is-margin-bottom-0.has-border-bottom-none
+header.page-header
   .container
     .page-header__container
       h2.page-header__title = title
