--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -2,7 +2,7 @@
 - content_for :head_last do
   = auto_discovery_link_tag :atom, feeds_url(format: "atom"), title: "みんなのブログ"
 
-header.page-header.is-margin-bottom-0.has-border-bottom-none
+header.page-header.is-margin-bottom-0.is-border-bottom-none
   .container
     .page-header__container
       h2.page-header__title ユーザー一覧
