--- a/app/views/admin/_admin_page_tabs.html.slim
+++ b/app/views/admin/_admin_page_tabs.html.slim
@@ -2,11 +2,11 @@
   .container.is-padding-horizontal-0-sm-down
     ul.page-tabs__items
       li.page-tabs__item
-        = link_to admin_root_path, class: "page-tabs__item-link #{active == 0 ? "is-current" : ""}" do
+        = link_to admin_root_path, class: "page-tabs__item-link #{active == 0 ? "is-active" : ""}" do
           | 管理ページ
       li.page-tabs__item
-        = link_to admin_users_path, class: "page-tabs__item-link #{active == 1 ? "is-current" : ""}" do
+        = link_to admin_users_path, class: "page-tabs__item-link #{active == 1 ? "is-active" : ""}" do
           | ユーザー一覧
       li.page-tabs__item
-        = link_to admin_categories_path, class: "page-tabs__item-link #{active == 2 ? "is-current" : ""}" do
+        = link_to admin_categories_path, class: "page-tabs__item-link #{active == 2 ? "is-active" : ""}" do
           | カテゴリー
