--- a/app/views/reports/unchecked/index.html.slim
+++ b/app/views/reports/unchecked/index.html.slim
@@ -1,6 +1,6 @@
 - title "未チェックの日報"
 
-header.page-header.is-margin-bottom-0.has-border-bottom-none
+header.page-header
   .container
     .page-header__container
       h2.page-header__title = title
@@ -9,7 +9,7 @@ header.page-header.is-margin-bottom-0.has-border-bottom-none
           .page-header-actions__item
             = link_to new_report_path, class: "is-button-simple-md-warning" do
               i.fas.fa-plus
-              = t("new_report")
+              | 日報作成
 
 = render "reports/tabs"
 
