デザイン調整

--- a/app/assets/stylesheets/blocks/shared/_nda.sass
+++ b/app/assets/stylesheets/blocks/shared/_nda.sass
@@ -29,7 +29,7 @@ body
 
 .nda__close
   +text-block(.875rem 2rem, 600)
-  +size(3rem 2rem)
+  height: 2rem
   opacity: .5
   cursor: pointer
   &:hover
