--- a/app/assets/stylesheets/welcome.sass
+++ b/app/assets/stylesheets/welcome.sass
@@ -1,6 +1,7 @@
 @import common-imports
 @import blocks/shared/alert
 @import blocks/shared/modal
+@import blocks/shared/nda
 @import welcome/**/*
 
 @import 'mojik/mojik'
