--- a/app/views/home/_faq.slim
+++ b/app/views/home/_faq.slim
@@ -94,7 +94,7 @@ section.welcome-section.is-faq#faq
           span(aria-hidden="true")  &times;
       .modal-body
         = render("question_form")
-      .modal-footer.is-text-align-center
+      .modal-footer
         .nda__actions-container
           .nda__close.js-modal__close(aria-label="Close" data-dismiss="modal" type="button")
             | やっぱやめた
