--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -14,13 +14,13 @@ header.page-header
 = render "reports/tabs"
 
 nav.sort-nav
-  .container
-    .sort-nav__inner
-      = form_tag reports_url, method: "get" do
+  = form_tag reports_url, method: "get" do
+    .container
+      .sort-nav__inner
         = hidden_field_tag :word, @search_words
         = label_tag :practice_id, "プラクティスで絞り込む:", class: "sort-nav__label"
-        .sort-nav__select.js-select2
-          = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, selected: params[:practice_id]), include_blank: "全ての日報を表示", onchange: "this.form.submit()"
+        .sort-nav__select
+          = select_tag :practice_id, options_from_collection_for_select(Practice.all, :id, :title, selected: params[:practice_id]), include_blank: "全ての日報を表示", onchange: "this.form.submit()", class: "js-select2"
 
 .page-body
   .container
