足跡のViewを共通化

--- a/app/views/announcements/show.html.slim
+++ b/app/views/announcements/show.html.slim
@@ -18,8 +18,4 @@ header.page-header
 .page-body
   .container
     = render "announcement", announcement: @announcement
-    - if @footprints.any?
-      .footprints
-        h3.footprints__title 見たよ
-        ul.footprints__items
-          = render @footprints
+    = render "footprints/footprints", footprints: @footprints
