--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -4,12 +4,7 @@ header.page-header
   .container
     .page-header__container
       h2.page-header__title = title
-      .page-header-actions
-        .page-header-actions__items
-          .page-header-actions__item
-            = link_to new_report_path, class: "is-button-simple-md-warning" do
-              i.fas.fa-plus
-              | 日報作成
+      = render "reports/new_report"
 
 = render "reports/tabs"
 
@@ -27,5 +22,5 @@ nav.sort-nav
     = paginate @reports, position: "top"
     - if @reports.present?
       .thread-list.a-card
-        = render partial: "reports/report_list_item", collection: @reports, as: :report, locals: { search_words: @search_words }
+        = render partial: "reports/report", collection: @reports, as: :report
     = paginate @reports, position: "bottom"
