--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -2,7 +2,7 @@
   h2.thread-comments-container__title
     | コメント
     span.thread-comments-container__title-count
-      = page_entries_info(comments, entry_name: "コメント")
+      = page_entries_info comments, entry_name: "コメント"
   .thread-comments
     = render partial: "comments/comment", collection: comments.order(:created_at), as: :comment
   - if defined?(form_visibility) && form_visibility
