--- a/app/views/users/reports/index.html.slim
+++ b/app/views/users/reports/index.html.slim
@@ -9,11 +9,10 @@ header.page-header
 
 = render "page_tabs", resource: @user
 
-.container
-  .thread-comments-container
+.page-body
+  .container
     = paginate @reports, position: "top"
-    h2.thread-comments-container__title
-      | 日報
-      span.thread-comments-container__title-count
-        = page_entries_info(@reports, entry_name: "日報")
-    = render "reports/reports", reports: @reports
+    - if @reports.present?
+      .thread-list.a-card
+        = render partial: "reports/report", collection: @reports, as: :report
+    = paginate @reports, position: "bottom"
