--- a/app/views/comments/_comments.html.slim
+++ b/app/views/comments/_comments.html.slim
@@ -1,8 +1,5 @@
 .thread-comments-container
-  h2.thread-comments-container__title
-    | コメント
-    span.thread-comments-container__title-count
-      = page_entries_info comments, entry_name: "コメント"
+  h2.thread-comments-container__title コメント
   .thread-comments
     = render partial: "comments/comment", collection: comments.order(:created_at), as: :comment
   - if defined?(form_visibility) && form_visibility
