--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -4,7 +4,7 @@
   header.auth-form__header
     h1.auth-form__title アカウント編集
   .auth-form__body
-    = render "form", user: @user, companies: @companies
+    = render "form", from: :edit, user: @user
   footer.auth-form__footer
     nav.auth-form-nav
       ul.auth-form-nav__items
